--- a/CSharp_FinalProject.csproj
+++ b/CSharp_FinalProject.csproj
@@ -7,4 +7,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Check\Check.csproj" />
+  </ItemGroup>
+
 </Project>
